--- a/graffitiwall/package.json
+++ b/graffitiwall/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-konva": "^19.2.0",
+    "react-router-dom": "^7.9.6",
     "use-image": "^1.1.4",
     "uuid": "^13.0.0"
   },
